(chore) refactored nornalize into scss, imported with rest of project scss

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,6 @@
 @import "@/scss/mixins/angle.scss";
 @import "@/scss/mixins/background-gradient.scss";
+@import "@/scss/vendor/normalize.scss";
 @import "@/scss/settings/variables.scss";
 @import "@/scss/layout/global.scss";
 
