(refactor): Slightly better project component, still needs work

--- a/components/projects/projects.scss
+++ b/components/projects/projects.scss
@@ -1,11 +1,8 @@
-.projects {
-  &__wrapper {
-    position: relative;
-    overflow: hidden;
-  }
-}
+// @TODO: Refactor this, BEM, no magic numbers.
 
 .grid {
+  position: relative;
+  overflow: hidden;
   display: grid;
   height: 100%;
   grid-template-columns: 1fr 1fr 1fr;
