Better projects css
Signed-off-by: Sebastien Crapoulet <crapoulet.sebastien@gmail.com>

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,5 +9,7 @@
 @import "@/components/footer/footer.scss";
 @import "@/components/header/header.scss";
 @import "@/components/projects/projects.scss";
+@import "@/components/projects/projects-overlay.scss";
+@import "@/components/projects/projects-preview.scss";
 @import "@/components/title/title.scss";
 @import "@/components/section/section.scss";
