--- a/scss/settings/variables.scss
+++ b/scss/settings/variables.scss
@@ -26,3 +26,4 @@ $section-margin : 50px;
 $grid-padding   : 15px;
 $big-card       : 310px;
 $small-card     : ($big-card/2)-($grid-padding/2);
+$font-size      : 16px;
