--- a/components/header/header.scss
+++ b/components/header/header.scss
@@ -32,6 +32,7 @@ $header-slide-transform-size: 30px;
     min-height: $header-slide-height;
     height: $header-slide-height;
     line-height: $header-slide-height;
+    margin: 0;
 
     @media(max-width: 768px) {
       $header-font-size: 30px;
