(feat) Added skills section

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -15,3 +15,4 @@
 @import "@/components/projects/projects-preview.scss";
 @import "@/components/title/title.scss";
 @import "@/components/section/section.scss";
+@import "@/components/skills/skills.scss";
