(refactor) Movved texts to site data, added intro component

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,6 +10,7 @@
 @import "@/components/companies/companies.scss";
 @import "@/components/footer/footer.scss";
 @import "@/components/header/header.scss";
+@import "@/components/intro/intro.scss";
 @import "@/components/projects/projects.scss";
 @import "@/components/projects/project-overlay.scss";
 @import "@/components/projects/project-preview.scss";
