--- a/components/section/section.scss
+++ b/components/section/section.scss
@@ -1,3 +1,12 @@
+// TODO: Review  header-neg global variable, use global media-query
+$main-content-max-width: 1100px;
+$main-content-max-width-mobile: 100%;
+$main-content-padding: 0 20px;
+$main-content-margin-top: 50px;
+$main-content-left-width: 40%;
+$main-content-right-width: 60%;
+$main-content-right-padding-top: 40px;
+
 .main-content {
   position: relative;
   background: $white;
@@ -7,13 +16,13 @@
 
   &__wrapper {
     display: flex;
-    max-width: 1100px;
+    max-width: $main-content-max-width;
     width: 100%;
     margin: 0 auto;
-    padding: 0 20px;
+    padding: $main-content-padding;
   
     @media(max-width: 1100px) {
-      max-width: 768px;
+      max-width: $main-content-max-width-mobile;
       width: auto;
     }
 
@@ -23,7 +32,7 @@
   }
 
   &__wrapper + &__wrapper {
-    margin-top: 50px;
+    margin-top: $main-content-margin-top;
   }
 
   &__wrapper:last-of-type {
@@ -31,11 +40,11 @@
   }
 
   &__left {
-    flex-basis: 40%;
+    flex-basis: $main-content-left-width;
   }
 
   &__right {
-    padding-top: 40px;
-    flex-basis: 60%;
+    padding-top: $main-content-right-padding-top;
+    flex-basis: $main-content-right-width;
   }
 }
