--- a/components/button/button.scss
+++ b/components/button/button.scss
@@ -1,59 +1,70 @@
+// TODO: Implement nudge, review global variables
+$button-padding: 20px 40px;
+$button-font-size: 24px;
+$button-box-shadow: 0 8px 10px -3px rgba(0,0,0,0.3);
+$button-transition: all 175ms ease; 
+$button-hover-top: 3px;
+$button-hover-box-shadow: 0 0 0 0 rgba(0,0,0,0);
+$button-project-padding: 10px 20px;
+$button-project-font-size: 14px;
+
 .button {
   position: relative;
   top: 0;
   background: $white;
-  padding: 20px 40px;
+  padding: $button-padding;
   color: $dark-red;
   font-size: 24px;
   font-weight: $semibold;
-  box-shadow: 0 8px 10px -3px rgba(0,0,0,0.3);
-  transition: all 175ms ease;
+  box-shadow: $button-box-shadow;
+  transition: $button-transition;
   font-style: normal;
 
-  &__nudge {
-    display: inline-block;
-    vertical-align: top;
-    transform: translate3d(0, 0, 0) rotate(0deg);
-    transform-origin: center center;
-    animation: nudge 6000ms linear infinite;
-
-    &:hover {
-      animation: none;
-    }
-  }
-
   &:hover {
-    top: 3px;
-    box-shadow: 0 0 0 0 rgba(0,0,0,0);
+    top: $button-hover-top;
+    box-shadow: $button-hover-box-shadow;
+  }
+
+  &--project {
+    padding: $button-project-padding;
+    color: $dark-red;
+    font-size: $button-project-font-size;
   }
 }
 
-.project-button {
-  padding: 10px 20px;
-  color: $dark-red !important;
-  font-size: 14px;
-}
+// TODO: Implement this
+// &__nudge {
+// display: inline-block;
+// vertical-align: top;
+// transform: translate3d(0, 0, 0) rotate(0deg);
+// transform-origin: center center;
+// animation: nudge 6000ms linear infinite;
 
-@keyframes nudge {
-    94% {
-        transform: translate3d(0, 0, 0) rotate(0);
-    }
-    95% {
-        transform: translate3d(0, -4px, 0) rotate(0);
-    }
-    96% {
-        transform: translate3d(0, -4px, 0)rotate(-2deg);
-    }
-    97% {
-        transform: translate3d(0, -4px, 0) rotate(0);
-    }
-    98% {
-        transform: translate3d(0, -4px, 0) rotate(2deg);
-    }
-    99% {
-        transform: translate3d(0, -4px, 0) rotate(0);
-    }
-    100% {
-        transform: translate3d(0, 0px, 0) rotate(0);
-    }
-}
+// &:hover {
+//     animation: none;
+// }
+// }
+
+// @keyframes nudge {
+//     94% {
+//         transform: translate3d(0, 0, 0) rotate(0);
+//     }
+//     95% {
+//         transform: translate3d(0, -4px, 0) rotate(0);
+//     }
+//     96% {
+//         transform: translate3d(0, -4px, 0)rotate(-2deg);
+//     }
+//     97% {
+//         transform: translate3d(0, -4px, 0) rotate(0);
+//     }
+//     98% {
+//         transform: translate3d(0, -4px, 0) rotate(2deg);
+//     }
+//     99% {
+//         transform: translate3d(0, -4px, 0) rotate(0);
+//     }
+//     100% {
+//         transform: translate3d(0, 0px, 0) rotate(0);
+//     }
+// }
