--- a/components/button/button.scss
+++ b/components/button/button.scss
@@ -1,4 +1,4 @@
-// TODO: Implement nudge, review global variables
+// TODO: Implement nudge
 $button-padding: 20px 40px;
 $button-font-size: 24px;
 $button-box-shadow: 0 8px 10px -3px rgba(0,0,0,0.3);
@@ -11,11 +11,11 @@ $button-project-font-size: 14px;
 .button {
   position: relative;
   top: 0;
-  background: $white;
+  background: $site-color-white;
   padding: $button-padding;
-  color: $dark-red;
+  color: $site-color-dark-red;
   font-size: 24px;
-  font-weight: $semibold;
+  font-weight: $site-font-weight-semibold;
   box-shadow: $button-box-shadow;
   transition: $button-transition;
   font-style: normal;
@@ -27,7 +27,7 @@ $button-project-font-size: 14px;
 
   &--project {
     padding: $button-project-padding;
-    color: $dark-red;
+    color: $site-color-dark-red;
     font-size: $button-project-font-size;
   }
 }
