--- a/components/section/section.scss
+++ b/components/section/section.scss
@@ -1,4 +1,4 @@
-// TODO: Review  header-neg global variable, use global media-query
+// TODO: use global media-query
 $main-content-max-width: 1100px;
 $main-content-max-width-mobile: 100%;
 $main-content-padding: 0 20px;
@@ -9,10 +9,10 @@ $main-content-right-padding-top: 40px;
 
 .main-content {
   position: relative;
-  background: $white;
-  padding-top: $header-neg;
-  @include angle(before, true, 3.5deg, $header-neg);
-  @include angle(after, false, 3.5deg, $header-neg);
+  background: $site-color-white;
+  padding-top: $site-header-angle-size;
+  @include angle(before, true, 3.5deg, $site-header-angle-size);
+  @include angle(after, false, 3.5deg, $site-header-angle-size);
 
   &__wrapper {
     display: flex;
@@ -36,7 +36,7 @@ $main-content-right-padding-top: 40px;
   }
 
   &__wrapper:last-of-type {
-    padding-bottom: $header-neg;
+    padding-bottom: $site-header-angle-size;
   }
 
   &__left {
